--- a/back-end/exercicio_1/questao1_PlacarJogo/index.html
+++ b/back-end/exercicio_1/questao1_PlacarJogo/index.html
@@ -32,7 +32,7 @@
     <p>Nome do clube:
         <input type="text" id="inClube">
     </p>
-    <input type="button" value="Adicionar Clube" id="btnAddClube">
+    <input type="button" value="Adicionar Clube" id="btnAdicionar">
 <input type="button" value="Listar clubes" id="btnListar">
 <input type="button" value="Gerar placar" id="btnPlacar">
 
